Refactor HTML structure and CSS styles: reorganize stacked images in telia.html and volvo.html for better layout; update work.html to indicate a project as "Coming Soon" with a disabled state; enhance CSS for disabled projects with overlay effects.

--- a/telia.html
+++ b/telia.html
@@ -104,31 +104,38 @@
                     Key focus was placed on handling complex situations like simultaneous bonus
                     selections and new user onboarding, ensuring a smooth experience regardless of
                     user circumstances.</p>
-                <div class="stacked-images">
-                    <div class="stacked-image-item">
-                        <div class="stacked-image-text">
-                            <div class="body-subheader">Rare case</div>
-                            <p class="body-text">If the invitee doesn't have an account on Telia, it needs to be
-                                created and it can take up to 5 minutes before the user can proceed</p>
-                        </div>
-                        <div class="section-image shadow-default">
-                            <img src="assets/images/Telia/Invite telia-familj.png" alt="Invite telia-familj">
-                        </div>
+
+            </div>
+
+            <div class="stacked-images">
+                <div class="stacked-image-item">
+                    <div class="stacked-image-text">
+                        <div class="body-subheader">Rare case</div>
+                        <p class="body-text">If the invitee doesn't have an account on Telia, it needs to be
+                            created and it can take up to 5 minutes before the user can proceed</p>
+                    </div>
+                    <div class="section-image shadow-default">
+                        <img src="assets/images/Telia/Invite telia-familj.png" alt="Invite telia-familj">
                     </div>
                 </div>
             </div>
 
             <div class="divider"></div>
 
-            <div class="section">
-                <div class="section-header">
-                    <div class="body-subheader">Benefits overview</div>
-                </div>
-                <p class="body-text">Benefit swaps are limited to once every 30 days</p>
-                <div class="section-image shadow-default">
-                    <img src="assets/images/Telia/cooldown.png" alt="Benefit cooldown">
+
+            <div class="stacked-images">
+                <div class="stacked-image-item">
+                    <div class="stacked-image-text">
+                        <div class="body-subheader">Benefits overview</div>
+                        <p class="body-text">Benefit swaps are limited to once every 30 days</p>
+                    </div>
+                    <div class="section-image shadow-default">
+                        <img src="assets/images/Telia/cooldown.png" alt="Invite telia-familj">
+                    </div>
                 </div>
             </div>
+
+
 
             <div class="divider"></div>
 
