--- a/volvo.html
+++ b/volvo.html
@@ -122,22 +122,24 @@
                     onboarding for future team members.
                 </p>
 
-                <div class="stacked-images">
-                    <div class="stacked-image-item">
-                        <div class="stacked-image-text">
-                            <div class="body-subheader">Before & After  (Before image pixelated for confidentiality)</div>
-                            <p class="body-text">One example of modernizing a core feature: The data table transformation shows
-                                how improved styling, clearer hierarchy, and enhanced functionality make
-                                information more accessible while maintaining familiarity for existing users.Added pixelation for legal 
-                        </div>
-                        <div class="section-image shadow-default">
-                            <img src="assets/images/volvo/capacity orders old.png" alt="capacity orders old">
-                        </div>
+
+            </div>
+
+            <div class="stacked-images">
+                <div class="stacked-image-item">
+                    <div class="stacked-image-text">
+                        <div class="body-subheader">Before & After  (Before image pixelated for confidentiality)</div>
+                        <p class="body-text">One example of modernizing a core feature: The data table transformation shows
+                            how improved styling, clearer hierarchy, and enhanced functionality make
+                            information more accessible while maintaining familiarity for existing users.Added pixelation for legal 
                     </div>
-                    <div class="stacked-image-item">
-                        <div class="section-image shadow-default">
-                            <img src="assets/images/volvo/capacity orders.png" alt="capacity orders new">
-                        </div>
+                    <div class="section-image shadow-default">
+                        <img src="assets/images/volvo/capacity orders old.png" alt="capacity orders old">
+                    </div>
+                </div>
+                <div class="stacked-image-item">
+                    <div class="section-image shadow-default">
+                        <img src="assets/images/volvo/capacity orders.png" alt="capacity orders new">
                     </div>
                 </div>
             </div>
@@ -157,26 +159,28 @@
                     user group.
                 </p>
 
-                <div class="stacked-images">
-                    <div class="stacked-image-item">
-                        <div class="stacked-image-text">
-                            <div class="body-subheader">Feedback - Most used features</div>
-                            <p class="body-text">Through direct conversations with users about this information-heavy interface,
-                                we identified which elements they actually interacted with most frequently. This
-                                user insight helped guide our decluttering decisions, removing rarely-used
-                                features while preserving and enhancing essential functionality.</p>
-                        </div>
-                        <div class="section-image shadow-default">
-                            <img src="assets/images/volvo/most used.png" alt="capacity orders old">
-                        </div>
+
+            </div>
+
+            <div class="stacked-images">
+                <div class="stacked-image-item">
+                    <div class="stacked-image-text">
+                        <div class="body-subheader">Feedback - Most used features</div>
+                        <p class="body-text">Through direct conversations with users about this information-heavy interface,
+                            we identified which elements they actually interacted with most frequently. This
+                            user insight helped guide our decluttering decisions, removing rarely-used
+                            features while preserving and enhancing essential functionality.</p>
                     </div>
-                    <div class="stacked-image-item">
-                        <div class="stacked-image-text">
-                            <p class="body-text">Ideating based on feedback & dialogue</p>
-                        </div>
-                        <div class="section-image shadow-default">
-                            <img src="assets/images/volvo/order handling overview.png" alt="capacity orders new">
-                        </div>
+                    <div class="section-image shadow-default">
+                        <img src="assets/images/volvo/most used.png" alt="capacity orders old">
+                    </div>
+                </div>
+                <div class="stacked-image-item">
+                    <div class="stacked-image-text">
+                        <p class="body-text">Ideating based on feedback & dialogue</p>
+                    </div>
+                    <div class="section-image shadow-default">
+                        <img src="assets/images/volvo/order handling overview.png" alt="capacity orders new">
                     </div>
                 </div>
             </div>
@@ -191,11 +195,13 @@
                     modern, intuitive interface while preserving essential workflows. Through direct
                     dialogue when needed with the small user group, we created a solution that not
                     only improved efficiency but also set a new standard for internal software at
-                    Volvo. The redesigned system maintains the robustness required for global
-                    manufacturing planning while providing a more accessible and visually consistent
-                    experience that aligns with Volvo's quality standards. This foundation now
-                    serves as a stepping stone for future iterations and improvements based on
-                    continued user feedback.</p>
+                    Volvo. <br><br>
+                        The redesigned system maintains the robustness required for global
+                        manufacturing planning while providing a more accessible and visually consistent
+                        experience that aligns with Volvo's quality standards. This foundation now
+                        serves as a stepping stone for future iterations and improvements based on
+                        continued user feedback.
+                    </br></p>
             </div>
 
             <div class="stacked-images">
