--- a/work.html
+++ b/work.html
@@ -60,14 +60,15 @@
                     </a>
                 </div>
                 <!-- Biljetter -->
-                <div class="content-block featured-project">
-                    <a href="biljetter.html" class="featured-project-link">
+                <div class="content-block featured-project disabled">
+                    <div class="featured-project-content">
                         <div class="titles">
                             <div class="card-title">Biljetter</div>
-                            <div class="card-title second">Hobby Project</div>
+                            <div class="card-title second">Coming Soon</div>
                         </div>
-                        <img src="assets/images/abstract.jpeg" alt="Placeholder">
-                    </a>
+                        <img src="assets/images/Biljetter/biljetter-cover.png" alt="Biljetter">
+                        <div class="coming-soon-overlay"></div>
+                    </div>
                 </div>
             </div>
         </div>
