Update home.html and index.html content; correct spelling in home.html, enhance index.html with additional details for "Basic Frontend" and add "Figma" section. Modify resume link in nav.js to open PDF in a new tab. Update CV content in PDF with translations and formatting improvements.

--- a/home.html
+++ b/home.html
@@ -246,7 +246,7 @@
                             <p>Design Systems</p>
                         </div>
                         <div class="list-item">
-                            <p>Basic Frontend</p>
+                            <p>Basicawewaewae</p>
                         </div>
                         <div class="list-item">
                             <p>User Research</p>
