--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             <p>Design Systems</p>
                         </div>
                         <div class="list-item">
-                            <p>Basic Frontend</p>
+                            <p>Basic Frontend (HTML, CSS)</p>
                         </div>
                         <div class="list-item">
                             <p>User Research</p>
@@ -254,6 +254,9 @@
                         <div class="list-item">
                             <p>WCAG</p>
                         </div>
+                        <div class="list-item">
+                            <p>Figma</p>
+                            </div>
                     </div>
                     
 
