--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <div class="card-title">Featured Project</div>
                             <div class="card-title second">Coop Insights</div>
                         </div>
-                        <img src="assets/images/Coop/coop-insights-cover.png" alt="Coop Insights Project">
+                        <img src="assets/images/featured.png" alt="Coop Insights Project">
                     </a>
                 </div>
                 <div class="content-block motto">
