Add config.js script to all HTML pages
  - Include js/config.js before other scripts in 9 HTML files
  - Ensures CONFIG constants are available globally
  - Load order: config.js → other JS files for proper dependencies

  Pages updated:
  - index.html
  - work.html
  - about.html
  - extensions.html
  - resume.html
  - coop.html
  - telia.html
  - volvo.html
  - project-template.html

  Completes the constants file implementation from previous commit.
  All JavaScript files can now reference CONFIG object for centralized constants.

--- a/about.html
+++ b/about.html
@@ -92,6 +92,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
     <!-- Then load our custom JavaScript -->
     <script src="index.js"></script>
+    <script src="js/config.js"></script>
     <script src="js/git-info.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
