--- a/coop.html
+++ b/coop.html
@@ -426,6 +426,7 @@ could focus and improve upon.
     </div>
 
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="js/config.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
     <script>
