--- a/work.html
+++ b/work.html
@@ -81,6 +81,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script>
