--- a/extensions.html
+++ b/extensions.html
@@ -163,6 +163,7 @@
         </div>
     </div>
 
+    <script src="js/config.js"></script>
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script>
