--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
     </div>
 
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="js/config.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/index.js"></script>
     <script src="js/nav.js"></script>
