--- a/volvo.html
+++ b/volvo.html
@@ -220,6 +220,7 @@
     </div>
 
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="js/config.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/nav.js"></script>
     <script>
