Add auctionet and tradera-vinted images, update extensions.html

--- a/extensions.html
+++ b/extensions.html
@@ -85,7 +85,7 @@
                     <div class="content-block featured-project">
                         <a href="https://github.com/fiski/auctionet" target="_blank" class="featured-project-link">
 
-                            <img src="portfolio\assets\images\auctionet.png" alt="Auctionet">
+                            <img src="\assets\images\auctionet.png" alt="Auctionet">
                         </a>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                     <div class="content-block featured-project">
                         <a href="https://github.com/fiski/site-specific-scribe" target="_blank" class="featured-project-link">
 
-                            <img src="portfolio\assets\images\tradera-vinted.png" alt="Tradera & Vinted">
+                            <img src="assets\images\tradera-vinted.png" alt="Tradera & Vinted">
                         </a>
                     </div>
                 </div>
