Update extensions.html and styles.css to add BrandsFrom section
- Replace "Ladda ner här" text with "GitHub link" for clarity.
- Introduce a new BrandsFrom section with a description and link to the website.
- Update CSS grid layout to accommodate the new BrandsFrom content.

--- a/extensions.html
+++ b/extensions.html
@@ -57,7 +57,7 @@
                             </div>
                             <div class="list-item small">
                                 <div class="title-small">
-                                    <p>Ladda ner här</p>
+                                    <p>GitHub link</p>
                                 </div>
                                 <div class="list-row">
                                     <div class="left-title big">
@@ -124,7 +124,7 @@
                             </div>
                             <div class="list-item small">
                                 <div class="title-small">
-                                    <p>Ladda ner här</p>
+                                    <p>GitHub link</p>
                                 </div>
                                 <div class="list-row">
                                     <div class="left-title big">
@@ -152,6 +152,65 @@
                         <a href="https://github.com/fiski/site-specific-scribe" target="_blank" class="featured-project-link">
 
                             <img src="assets\images\tradera-vinted.png" alt="Tradera & Vinted">
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="brandsfrom">
+                    <div class="content-block extension">
+                        <div class="card-title">
+                            BrandsFrom
+                        </div>
+                        <div class="list">
+                            <div class="list-item small paragraph">
+
+
+                                <div class="list-row">
+                                    <div class="left-title big">
+
+                                        <h3>The database of Swedish brands and manufacturers</h3>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="title-small">
+                                    <p>Made in Sweden? It's not always as simple as it sounds. This database creates transparency about Swedish brands and where their products are actually manufactured.
+                                    </p>
+                                </div>
+
+                            </div>
+                            <div class="list-item small">
+                                <div class="title-small">
+                                    <p>Visit the website here</p>
+                                </div>
+                                <div class="list-row">
+                                    <div class="left-title big">
+                                        <p><a
+                                                href="https://brandsfrom.se/">https://brandsfrom.se/</a>
+                                        </p>
+                                    </div>
+                                    <a href="https://brandsfrom.se/" class="arrowBtn">
+                                        <i class="feather-16" data-feather="arrow-right"></i>
+                                    </a>
+                                </div>
+
+
+                            </div>
+
+
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="brandsfrom-img">
+                    <div class="content-block featured-project">
+                        <a href="https://brandsfrom.se/" target="_blank" class="featured-project-link">
+
+                            <img src="assets\images\brandsfrom.png" alt="BrandsFrom">
                         </a>
                     </div>
                 </div>
