Update titles and navigation links for consistency in extensions and work pages
- Change page titles from "Extensions" to "Development" and "Work" to "Design" for better alignment with content.
- Update navigation links to reflect the new titles, ensuring a cohesive user experience across the site.

--- a/extensions.html
+++ b/extensions.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
-    <title>Extensions - Maximilian Relam Wide</title>
+    <title>Development - Maximilian Relam Wide</title>
     <style>
         body {
             background-color: var(--color-neutral-background);
@@ -24,7 +24,7 @@
     <div class="section">
         <div class="container">
             <div class="section-header">
-                <div class="body-subheader">Extensions</div>
+                <div class="body-subheader">Development</div>
                 <h2>Browser & design tooling</h2>
             </div>
             <div class="extension-grid">
