--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
         })(window, document, "clarity", "script", "s1a0pqfjhl");
     </script>
 
-    <title>Work - Maximilian Relam Wide</title>
+    <title>Design - Maximilian Relam Wide</title>
     <style>
         body {
             background-color: var(--color-neutral-background);
@@ -32,7 +32,7 @@
     <div class="section">
         <div class="container">
             <div class="section-header">
-                <div class="body-subheader">Work</div>
+                <div class="body-subheader">Design</div>
                 <h2>Selected projects</h2>
             </div>
             <!-- PPO -->
