test force deploy on change

--- a/extensions.html
+++ b/extensions.html
@@ -151,7 +151,7 @@
                     <div class="content-block featured-project">
                         <a href="https://github.com/fiski/site-specific-scribe" target="_blank" class="featured-project-link">
 
-                            <img src="assets\images\tradera-vinted.png" alt="Tradera & Vinted">
+                            <img src="assets\images\tradera-vinted.png" alt="Tradera och Vinted">
                         </a>
                     </div>
                 </div>
