update page titles

--- a/extensions.html
+++ b/extensions.html
@@ -25,7 +25,7 @@
         <div class="container">
             <div class="section-header">
                 <div class="body-subheader">Development</div>
-                <h2>Browser & design tooling</h2>
+                <h2>Stuff for the web</h2>
             </div>
             <div class="extension-grid">
 
@@ -33,7 +33,7 @@
                     <div class="content-block extension">
                         <div class="card-title">
                             Auctionet
-                        </div>
+                        </div>  
                         <div class="list">
                             <div class="list-item small paragraph">
 
@@ -169,7 +169,7 @@
                                 <div class="list-row">
                                     <div class="left-title big">
 
-                                        <h3>The database of Swedish brands and manufacturers</h3>
+                                        <h3>A database of Swedish brands and manufacturers</h3>
 
                                     </div>
 
