--- a/work.html
+++ b/work.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="section-header">
                 <div class="body-subheader">Design</div>
-                <h2>Selected projects</h2>
+                <h2>Selected design cases</h2>
             </div>
             <!-- PPO -->
             <div class="work-projects">
