add navigation animation for smoother transitioning

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <script>document.body.classList.add('js-loaded');</script>
     <div class="section">
         <div class="container-smaller">
             <div class="grid grid-about">
