--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 </head>
 
 <body>
-
-    
+    <script>document.body.classList.add('js-loaded');</script>
 
     <div class="section">
         <div class="container">
