--- a/work.html
+++ b/work.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <script>document.body.classList.add('js-loaded');</script>
     <div class="section">
         <div class="container">
             <div class="section-header">
