retrigger workflow build

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                             I'm a purpose-driven and hands-on UX/UI designer based in Gothenburg, Sweden, with a
                             background in digital design and media. Having worked across various industries, from large
                             corporations to startups, I understand the importance of balancing creativity with business
-                            objectives.
+                            objectives. 
                         </div>
                     </div>
                     <div class="divider"></div>
@@ -49,7 +49,7 @@
                                 I take a holistic approach to design, ensuring that every decision not only enhances the user experience but also
                                 contributes to strategic goals. I work in short iterations, refining ideas thoughtfully and validating hypotheses
                                 effectively. I enjoy being involved in all aspects of a project, from strategy and UX/UI design to motion and
-                                interaction design–always keeping the user at the core of my process.
+                                interaction design–always keeping the user at the core of my process
                             </p>
 
                         </div>
@@ -58,7 +58,7 @@
                                 With an understanding of front-end development, I bridge the gap between design and implementation, making collaboration
                                 with developers smoother and ensuring that ideas are both innovative and feasible. For me, simplicity is at the heart of
                                 great design. I believe design is about solving problems with clarity and purpose–creating something both useful and
-                                well-reasoned.
+                                well-reasoned   
                             </p>
                             <div>
                                 <!-- <a href="https://www.linkedin.com/in/maximilianrelam/" target="_blank">Linkedin</a> -->
