Update client logos and animation settings for improved display
- Added new client logos to the carousel for enhanced representation.
- Adjusted the width and animation duration of the logo track to accommodate the increased number of logos.
- Updated alt text for better accessibility and SEO.
- Implemented reduced motion support for users with accessibility needs.

--- a/index.html
+++ b/index.html
@@ -222,20 +222,23 @@
                     </div>
                     <div class="client-logo-list">
                         <div class="client-logo-track">
-                            <img src="assets/images/clients/casa-soleado.png" alt="Company">
-                            <img src="assets/images/clients/cleancenter.png" alt="Company">
-                            <img src="assets/images/clients/minnesplatsen.png" alt="Company">
-                            <img src="assets/images/clients/volvo.png" alt="Company">
-                            <img src="assets/images/clients/telia.png" alt="Company">
-                            <img src="assets/images/clients/coop.png" alt="Company">
-                            <!-- Duplicate for seamless effect -->
-                            <img src="assets/images/clients/casa-soleado.png" alt="Company">
-                            <img src="assets/images/clients/cleancenter.png" alt="Company">
-                            <img src="assets/images/clients/minnesplatsen.png" alt="Company">
-                            <img src="assets/images/clients/volvo.png" alt="Company">
-                            <img src="assets/images/clients/telia.png" alt="Company">
-                            <img src="assets/images/clients/coop.png" alt="Company">
-                            
+                            <img src="assets/images/clients/casa-soleado.png" alt="Casa Soleado">
+                            <img src="assets/images/clients/cleancenter.png" alt="Cleancenter">
+                            <img src="assets/images/clients/minnesplatsen.png" alt="Minnesplatsen">
+                            <img src="assets/images/clients/volvo.png" alt="Volvo">
+                            <img src="assets/images/clients/telia.png" alt="Telia">
+                            <img src="assets/images/clients/coop.png" alt="Coop">
+                            <img src="assets/images/clients/ecotwin.png" alt="Ecotwin">
+                            <img src="assets/images/clients/kompassant.png" alt="Kompassant">
+                            <!-- Duplicate for seamless loop -->
+                            <img src="assets/images/clients/casa-soleado.png" alt="Casa Soleado">
+                            <img src="assets/images/clients/cleancenter.png" alt="Cleancenter">
+                            <img src="assets/images/clients/minnesplatsen.png" alt="Minnesplatsen">
+                            <img src="assets/images/clients/volvo.png" alt="Volvo">
+                            <img src="assets/images/clients/telia.png" alt="Telia">
+                            <img src="assets/images/clients/coop.png" alt="Coop">
+                            <img src="assets/images/clients/ecotwin.png" alt="Ecotwin">
+                            <img src="assets/images/clients/kompassant.png" alt="Kompassant">
                         </div>
                     </div>
                 </div>
