--- a/index.html
+++ b/index.html
@@ -298,9 +298,11 @@
     <script src="js/footer.js"></script>
     <script src="js/index.js"></script>
     <script src="js/nav.js"></script>
+    <script src="js/carousel.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initNavigation('index');
+            initCarousel();
             feather.replace();
         });
     </script>
